test_suite5/ALAN/test_suite/alan-2022-examples/passing/000006_random.alan
source I6 begin call M() end
